--- a/Scripts-Data-Exposer-FS.vcxproj.filters
+++ b/Scripts-Data-Exposer-FS.vcxproj.filters
@@ -155,6 +155,9 @@
     <ClInclude Include="target\TargetNpcPosition.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="target\CoordinatePointers.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="include\mem\cpp.hint" />
