--- a/Scripts-Data-Exposer-FS.vcxproj
+++ b/Scripts-Data-Exposer-FS.vcxproj
@@ -169,6 +169,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BulletInfo.cpp" />
+    <ClCompile Include="bullet\BulletInfo.h" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -226,6 +228,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="include\mem\cpp.hint" />
+    <MASM Include="bullet_decorator.asm" />
     <MASM Include="decorator.asm">
       <FileType>Document</FileType>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
