--- a/Scripts-Data-Exposer-FS.vcxproj.filters
+++ b/Scripts-Data-Exposer-FS.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="BulletInfo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="BulletLog.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
@@ -162,6 +165,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="target\CoordinatePointers.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="bullet\BulletLog.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
