--- a/Scripts-Data-Exposer-FS.vcxproj
+++ b/Scripts-Data-Exposer-FS.vcxproj
@@ -171,7 +171,10 @@
   <ItemGroup>
     <ClCompile Include="BulletInfo.cpp" />
     <ClCompile Include="BulletLog.cpp" />
-    <ClCompile Include="bullet\BulletInfo.h" />
+    <ClCompile Include="BulletPatch.cpp" />
+    <ClInclude Include="bullet\BulletInfo.h">
+      <FileType>CppCode</FileType>
+    </ClInclude>
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -180,12 +183,13 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="TargetNpcInfo.cpp" />
-    <ClCompile Include="TargetNpcInfoPtr.cpp" />
+    <ClCompile Include="WorldInfo.cpp" />
     <ClCompile Include="TargetNpcPatch.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AOBScan.h" />
     <ClInclude Include="bullet\BulletLog.h" />
+    <ClInclude Include="bullet\BulletPatch.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="game\AOBScan.h" />
     <ClInclude Include="game\Emevd.h" />
@@ -220,9 +224,9 @@
     <ClInclude Include="include\mem\utils.h" />
     <ClInclude Include="include\MinHook.h" />
     <ClInclude Include="pch.h" />
-    <ClInclude Include="target\CoordinatePointers.h" />
+    <ClInclude Include="game\CoordinatePointers.h" />
     <ClInclude Include="target\TargetNpcInfo.h" />
-    <ClInclude Include="target\TargetNpcInfoPtr.h" />
+    <ClInclude Include="world\WorldInfo.h" />
     <ClInclude Include="target\TargetNpcPatch.h" />
     <ClInclude Include="target\TargetNpcPosition.h" />
     <ClInclude Include="target\testheader.h" />
@@ -231,7 +235,7 @@
   <ItemGroup>
     <None Include="include\mem\cpp.hint" />
     <MASM Include="bullet_decorator.asm" />
-    <MASM Include="decorator.asm">
+    <MASM Include="target_decorator.asm">
       <FileType>Document</FileType>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</ExcludedFromBuild>
