Moving out AOB scan functionality into AOBScanCore, so that it does not come with all the ProcessData baggage and can be reused separately. Also forced to make text and text_size global to allow defaults to be inherited globally instead of being stuck in static context.

--- a/Scripts-Data-Exposer-FS.vcxproj.filters
+++ b/Scripts-Data-Exposer-FS.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="ActionInterpreter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CustomFunctionalityHooks.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
@@ -195,6 +198,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="world\ActionInterpreter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="world\CustomFunctionalityHooks.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="game\AOBScanCore.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
