--- a/Scripts-Data-Exposer-FS.vcxproj
+++ b/Scripts-Data-Exposer-FS.vcxproj
@@ -176,6 +176,7 @@
     <ClInclude Include="bullet\BulletInfo.h">
       <FileType>CppCode</FileType>
     </ClInclude>
+    <ClCompile Include="CustomFunctionalityHooks.cpp" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -195,6 +196,7 @@
     <ClInclude Include="bullet\BulletPatch.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="game\AOBScan.h" />
+    <ClInclude Include="game\AOBScanCore.h" />
     <ClInclude Include="game\Emevd.h" />
     <ClInclude Include="game\HksState.h" />
     <ClInclude Include="game\ProcessData.h" />
@@ -233,6 +235,7 @@
     <ClInclude Include="tae\TaeEditor.h" />
     <ClInclude Include="target\TargetNpcInfo.h" />
     <ClInclude Include="world\ActionInterpreter.h" />
+    <ClInclude Include="world\CustomFunctionalityHooks.h" />
     <ClInclude Include="world\WorldInfo.h" />
     <ClInclude Include="target\TargetNpcPatch.h" />
     <ClInclude Include="target\TargetNpcPosition.h" />
